--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,33 @@
-# Core LangChain
-langchain==0.1.0
-langchain-community==0.0.13
-langchain-openai==0.0.2
-langgraph==0.0.20
-langsmith==0.0.77
+# Core LangChain - Updated for Python 3.13 compatibility
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-openai>=0.2.0
+langgraph>=0.2.0
+langsmith>=0.2.0
 
 # LLM Providers
-openai==1.7.0  # For OpenRouter API compatibility
+openai>=1.50.0  # For OpenRouter API compatibility
 
 # Vector Stores & Embeddings
-chromadb==0.4.22
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
+chromadb>=0.5.0
+sentence-transformers>=3.0.0
 
 # Document Processing
-pypdf==3.17.4
-beautifulsoup4==4.12.2
-python-multipart==0.0.6
+pypdf>=5.0.0
+beautifulsoup4>=4.12.0
+python-multipart>=0.0.6
 
 # Web Tools
-requests==2.31.0
-duckduckgo-search==4.1.0
+requests>=2.32.0
+duckduckgo-search>=6.0.0
 
 # API Framework (for later)
-fastapi==0.108.0
-uvicorn==0.25.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
 
 # Utilities
-python-dotenv==1.0.0
-pydantic==2.5.3
+python-dotenv>=1.0.0
 
 # Jupyter Support
-ipykernel==6.28.0
-jupyter==1.0.0
+ipykernel>=6.29.0
+jupyter>=1.1.0
