--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain>=0.3.0
 langchain-community>=0.3.0
 langchain-openai>=0.2.0
+langchainhub>=0.1.21
 langgraph>=0.2.0
 langsmith>=0.2.0
 
@@ -20,6 +21,7 @@ python-multipart>=0.0.6
 # Web Tools
 requests>=2.32.0
 duckduckgo-search>=6.0.0
+ddgs>=1.1.0
 
 # API Framework (for later)
 fastapi>=0.115.0
